--- a/project/.env
+++ b/project/.env
@@ -30,3 +30,8 @@ APP_SECRET=aade785bc9a138c9ff3492439b3bf369
 DATABASE_URL="mysql://root:@127.0.0.1:3306/Tasker?serverVersion=5.7"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
